# m1-riemann-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: Makefile  plot_latex_pgfplot.tex
include/: m1_riemann.h
script/: plot_solution.py  requirements.txt
src/: m1_riemann.c
test/: CMakeLists.txt  solve_example.c
